# slingshot

./: TODO  hello.hs  slingshot.cabal
src/Network/Waisp/Handler/: Slingshot.hs
src/Network/Waisp/Handler/Slingshot/: Network.hs  Request.hs  Settings.hs  Utils.hs
tests/: doctests.hs
