name:                slingshot
version:             0.1
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3
build-type:          Simple
homepage:            https://github.com/jdnavarro/slingshot
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
category:            Web
synopsis:            A simple web server for WAISP applications
description:         Experimental handler for WAISP
-- extra-source-files: CHANGELOG

source-repository head
  type: git
  location: git://github.com/jdnavarro/slingshot.git

library
  exposed-modules:  Network.Waisp.Handler.Slingshot,
                    Network.Waisp.Handler.Slingshot.Request,
                    Network.Waisp.Handler.Slingshot.Settings,
                    Network.Waisp.Handler.Slingshot.Network
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >= 4.6 && < 4.8,
                    binary,
                    bytestring,
                    containers,
                    network >= 2.4,
                    text >= 0.7,
                    exceptions,
                    attoparsec,
                    waisp

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  hs-source-dirs: tests
  ghc-options:    -Wall -threaded
  build-depends:  base >= 4.6 && < 4.8,
                  doctest
