name:                slingshot
version:             0.1
cabal-version:       >=1.10
tested-with:         GHC == 7.8.2
build-type:          Simple
homepage:            https://github.com/jdnavarro/slingshot
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
category:            Web
synopsis:            A simple web server for WAISP applications
description:         Experimental handler for WAISP
-- extra-source-files: CHANGELOG

source-repository head
  type: git
  location: git://github.com/jdnavarro/slingshot.git

library
  exposed-modules:  Network.Waisp.Handler.Slingshot,
                    Network.Waisp.Handler.Slingshot.Request,
                    Network.Waisp.Handler.Slingshot.Settings,
                    Network.Waisp.Handler.Slingshot.Network
  -- other-modules:    
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >= 4.6 && < 5,
                    binary,
                    bytestring,
                    transformers,
                    containers,
                    network,
                    text,
                    exceptions,
                    attoparsec,
                    pipes,
                    pipes-network,
                    pipes-attoparsec,
                    pipes-bytestring,
                    waisp,
                    bytestring-buildable

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >= 4.6 && < 5,
                    doctest
